# tremotesf

./: .gitignore  CMakeLists.txt  README.md  harbour-tremotesf.desktop  tremotesf.files  tremotesf.includes  wscript
qml/: tremotesf.qml
qml/components/: AlternativeLimitsTimeButton.qml  CommonComboBox.qml  CommonListItem.qml  CommonTextField.qml  CommonTextSwitch.qml  DetailsPageGridButton.qml  EditAccountItem.qml  FilePickerTextField.qml  FilterTorrentsListItem.qml  ListItemMargin.qml  ParentDirectoryItem.qml  SelectDirectoryTextField.qml  ServerSettingsTextField.qml  ServerSettingsTextSwitch.qml  SortTorrentsListItem.qml  TorrentDelegateItem.qml
qml/cover/: CoverPage.qml
qml/dialogs/: AddAccountDialog.qml  AddTorrentDialog.qml  AddTrackerDialog.qml  DirectoryPickerDialog.qml  FilePickerDialog.qml  TorrentFilePickerDialog.qml
qml/pages/: AboutPage.qml  AccountsPage.qml  DownloadingSettingsPage.qml  EditAccountPage.qml  EditTrackerPage.qml  FilterTorrentsPage.qml  NetworkSettingsPage.qml  QueueSettingsPage.qml  ServerSettingsPage.qml  SettingsPage.qml  TorrentsPage.qml  (+7 more)
rpm/: harbour-tremotesf.spec
src/: CMakeLists.txt  accountmodel.cpp  accountmodel.h  appsettings.cpp  appsettings.h  baseproxymodel.cpp  baseproxymodel.h  dbusproxy.cpp  dbusproxy.h  notifications.cpp  notifications.h  proxyfilemodel.cpp  proxyfilemodel.h  proxytorrentmodel.cpp  proxytorrentmodel.h  torrentfilemodel.cpp  torrentfilemodel.h  torrentmodel.cpp  torrentmodel.h  torrentpeermodel.cpp  torrentpeermodel.h  torrenttrackermodel.cpp  torrenttrackermodel.h  transmission.cpp  transmission.h  tremotesf.cpp  utils.cpp  utils.h
src/folderlistmodel/: fileinfothread.cpp  qquickfolderlistmodel.cpp
translations/: CMakeLists.txt  harbour-tremotesf-en.ts  harbour-tremotesf-it.ts  harbour-tremotesf-ru.ts  update.sh
